--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^3.2.0",
+    "@vercel/analytics": "^1.2.2",
     "d3": "^7.9.0",
     "svelte-motion": "^0.12.2"
   }
